# ProPainter

./: .gitignore  README.md  REGION_COORDINATES.md  inference_propainter.py  process_video_segments.py  pyproject.toml
scripts/: generate_mask_from_regions.py  remove_subtitles.py
web-demos/hugging_face/: app.py
